fixed additional markup_2

--- a/catalog.pug
+++ b/catalog.pug
@@ -100,6 +100,12 @@ html(lang="ru")
                 label(for="network") сетевые
             button(type="submit") Показать
         section.goods.catalog
+          .sort
+            .sort-to сортировка:
+            .sort-to-type по цене
+            .sort-to-functional по функионалу
+            .sort-to-up
+            .sort-to-down
           .goods-item
             a(href="")
               img(src="", alt="")
@@ -194,7 +200,9 @@ html(lang="ru")
               a(href="") Спецпредложения
         .bottom-row
           p © 2010-2017 Компания "Техномарт" Все права защищены
-          img(src="", alt="alt")
+          .social-vk
+          .social-facebook
+          .social-instagram
           p Обратная связь
           a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
           a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") Разработано htmlacademy.ru
