--- a/index.pug
+++ b/index.pug
@@ -201,7 +201,9 @@ html(lang="ru")
               a(href="") Спецпредложения
         .bottom-row
           p © 2010-2017 Компания "Техномарт" Все права защищены
-          img(src="", alt="alt")
+          .social-vk
+          .social-facebook
+          .social-instagram
           p Обратная связь
           a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
           a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") Разработано htmlacademy.ru
