--- a/catalog.pug
+++ b/catalog.pug
@@ -9,7 +9,7 @@ html(lang="ru")
       .container
         .top-row
           .logo-top
-            img(src="", alt="alt")
+            img(src="img/logo-technomart.svg", alt="logo")
           .search
             form(action="search.html" method="get")
               input(type="text" placeholder="Поиск:")
@@ -54,9 +54,9 @@ html(lang="ru")
         ul.breadcrumbs
           li.breadcrumbs-item.home
             a(href="index.html") 
-              img(src="", alt="home")
+              img(src="img/icon-home.svg", alt="home")
           li.breadcrumbs-item
-            a(href="") Каталог 
+            a(href="") Каталог
           li.breadcrumbs-item
             a(href="") Инструмент
           li.breadcrumbs-item
@@ -116,53 +116,53 @@ html(lang="ru")
                 a(href="")
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
             h3.title Перфоратор BOSCH BFG 3000
             s.old-price 22500 Р.
             p.price 15500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
             h3.title Перфоратор BOSCH BFG 6000
             s.old-price 30500 Р.
             p.price 25500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
             h3.title Перфоратор BOSCH BFG 3000
             s.old-price 22500 Р.
             p.price 15500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
             h3.title Перфоратор BOSCH BFG 6000
             s.old-price 30500 Р.
             p.price 25500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
             h3.title Перфоратор BOSCH BFG 3000
             s.old-price 22500 Р.
             p.price 15500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
             h3.title Перфоратор BOSCH BFG 6000
             s.old-price 30500 Р.
             p.price 25500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
           .pager
@@ -182,7 +182,7 @@ html(lang="ru")
       .container
         .top-row
           .logo-bottom
-            img(src="", alt="alt")
+            img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li
               a(href="") Компания
