--- a/index.pug
+++ b/index.pug
@@ -9,9 +9,10 @@ html(lang="ru")
       .container
         .top-row
           .logo-top
-            img(src="", alt="alt")
+            img(src="img/logo-technomart.svg", alt="logo")
           .search
             form(action="search.html" method="get")
+              input(type="image", src="img/icon-search.svg", alt="search")
               input(type="text" placeholder="Поиск:")
               button(type="submit")
           .bookmarks Закладки:
@@ -85,25 +86,25 @@ html(lang="ru")
         .goods
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_9000.jpg", alt="Perforator_9000")
             h3.title Перфоратор BOSCH BFG 9000
             s.old-price 32500 Р.
             p.price 25500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
             h3.title Перфоратор BOSCH BFG 3000
             s.old-price 22500 Р.
             p.price 15500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
             h3.title Перфоратор BOSCH BFG 6000
             s.old-price 30500 Р.
             p.price 25500 Р.
           .goods-item
             a(href="")
-              img(src="", alt="")
+              img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
       section.popular.manufacturer
@@ -113,28 +114,28 @@ html(lang="ru")
         ul.manufacturers
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/bosch.jpg", alt="bosch")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/Makita.jpg", alt="Makita")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/DeWALT.jpg", alt="DeWALT")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/Интерскол.jpg", alt="Интерскол")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/Hitachi.jpg", alt="Hitachi")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/LG.jpg", alt="LG")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")
+              img(src="img/AEG.jpg", alt="AEG")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="", alt="")      
+              img(src="img/Metabo.jpg", alt="Metabo")      
       .company-info-wrapper
         .service
           h3 Сервисы
@@ -173,11 +174,17 @@ html(lang="ru")
             p можете выбрать товар сами, заехав в наш офис:
             iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
             a(href="") Заблудились? Напишите нам!
+          .send-form
+            form(action="https://echo.htmlacademy.ru/courses" method="post")
+              label(for="introduce") Ваше имя:
+              input(type="text" name="introduce" placeholder="Представьтесь, пожалуйста")
+              .button
+                button(type="submit") отправить
     footer.page-footer
       .container
         .top-row
           .logo-bottom
-            img(src="", alt="alt")
+            img(src="img/logo-technomart.svg", alt="logo")
           ul.footer-nav
             li
               a(href="") Компания
