--- a/index.pug
+++ b/index.pug
@@ -199,9 +199,9 @@ html(lang="ru")
               p.e-mail.half-width
                 label(for="e-mail") Ваш e-mail:
                 input(type="text" name="e-mail" placeholder="email@example.com")
-              p.send-text.full-width
-                label(for="send-text") Текст письма:
-                input(type="text" name="send-text" placeholder="В свободной форме")
+              p.text.full-width
+                label(for="text") Текст письма:
+                textarea(name="text" placeholder="В свободной форме" rows="6")
               .button
                 button.btn(type="submit") отправить
     footer.page-footer
