checked all elements

--- a/catalog.pug
+++ b/catalog.pug
@@ -31,7 +31,7 @@ html(lang="ru")
           .order Оформить заказ
         .middle-row
           .slogan
-            h2 главные данные
+            h2.visually-hidden главные данные
             p Интернет-магазин строительных материалов и инструментов для ремонта
           .address
             a(href="tel:+78125550555") +7 (812) 555-05-55
@@ -94,24 +94,24 @@ html(lang="ru")
                 input(type="checkbox" name="bosch" id="bosch" checked)
                 label(for="bosch") bosch
               p
-                input(type="checkbox" name="interscol" id="interscol") 
+                input(type="checkbox" name="interscol" id="interscol")
                 label(for="interscol") интерскол
               p
-                input(type="checkbox" name="makita" id="makita" checked) 
+                input(type="checkbox" name="makita" id="makita" checked)
                 label(for="makita") makita
               p
-                input(type="checkbox" name="dewalt" id="dewalt") 
+                input(type="checkbox" name="dewalt" id="dewalt")
                 label(for="dewalt") dewalt
               p
-                input(type="checkbox" name="hitachi" id="hitachi") 
+                input(type="checkbox" name="hitachi" id="hitachi")
                 label(for="hitachi") hitachi
             fieldset.choose-filter
               legend питание:
               p
-                input(type="radio" name="charge" value="accum" id="accum" checked) 
+                input(type="radio" name="charge" value="accum" id="accum" checked)
                 label(for="accum") аккумуляторные
-              p 
-                input(type="radio" name="charge" value="network" id="network") 
+              p
+                input(type="radio" name="charge" value="network" id="network")
                 label(for="network") сетевые
             button(type="submit") Показать
         section.goods.catalog
@@ -124,7 +124,7 @@ html(lang="ru")
                 a(href="") по типу
               li.sort-to-functional
                 a(href="") по функионалу
-            ul.arrows 
+            ul.arrows
               li.arrow-item-up
                 a(href="") up
               li.arrow-item-down
