--- a/index.pug
+++ b/index.pug
@@ -14,7 +14,7 @@ html(lang="ru")
             form(action="search.html" method="get")
               svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                 path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
-              input(type="text", id="search" placeholder="Поиск:") 
+              input(type="text", id="search" placeholder="Поиск:")
               label(for="search")
           .bookmarks
             svg(xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16")
@@ -31,7 +31,7 @@ html(lang="ru")
           .order Оформить заказ
         .middle-row
           .slogan
-            h2 главные данные
+            h2.visually-hidden главные данные
             p Интернет-магазин строительных материалов и инструментов для ремонта
           .address
             a(href="tel:+78125550555") +7 (812) 555-05-55
@@ -152,7 +152,7 @@ html(lang="ru")
               img(src="img/AEG.png", alt="AEG")
           li.manufacturers-item
             a(href="" target="_blank")
-              img(src="img/Metabo.png", alt="Metabo")      
+              img(src="img/Metabo.png", alt="Metabo")
       .company-info-wrapper
         .service
           h3 Сервисы
@@ -161,9 +161,9 @@ html(lang="ru")
             ul.service-tab-nav
               li.service-tab-item(data-name="1")
                 a(href="") Доставка
-              li.service-tab-item(data-name="2") 
+              li.service-tab-item(data-name="2")
                 a(href="") Гарантия
-              li.service-tab-item(data-name="3") 
+              li.service-tab-item(data-name="3")
                 a(href="") Кредит
             .service-tab-content
               .service-tab-item.deliverity
@@ -179,19 +179,19 @@ html(lang="ru")
         .about
           .company
             h2 Компания "Техномарт"
-            p.text Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. 
+            p.text Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.
             p.text Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:
             ul.partners
               li.partner Деловые линии
               li.partner Автотрейдинг
               li.partner ЖелДорЭкспедиция
-            a.btn(href="about.html") Подробнее о компании 
+            a.btn(href="about.html") Подробнее о компании
           .contacts
             h2 Контакты
             p можете выбрать товар сами, заехав в наш офис:
             iframe(src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;source=constructor" width="300" height="158" frameborder="0")
             a.btn(href="") Заблудились? Напишите нам!
-          .send-form
+          .send-form.visually-hidden
             form(action="https://echo.htmlacademy.ru/courses" method="post")
               p.name-half-width
                 label(for="introduce") Ваше имя:
