--- a/index.pug
+++ b/index.pug
@@ -9,7 +9,8 @@ html(lang="ru")
       .container
         .top-row
           .logo-top
-            img(src="img/logo-technomart.svg", alt="logo")
+            a(href="")
+              img(src="img/logo-technomart.svg", alt="logo")
           .search
             form(action="search.html" method="get")
               label(for="search")
@@ -19,16 +20,16 @@ html(lang="ru")
           .bookmarks
             svg(xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16")
               path(fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z")
-            p Закладки:
+            a(href="") Закладки:
             span 0
           .cart
             svg(xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15")
               circle(fill="#ffffff" cx="4.5" cy="13.5" r="1.5")
               circle(fill="#ffffff" cx="12.5" cy="13.5" r="1.5")
               path(fill="#ffffff" d="M15 2H4.07l-.422-2H0v2h2.031l1.985 9H15V9H9.441L15 6.951z")
-            p Корзина:
+            a(href="") Корзина:
             span 0
-          .order Оформить заказ
+          a.order(href="") Оформить заказ
         .middle-row
           .slogan
             h2.visually-hidden главные данные
@@ -108,23 +109,35 @@ html(lang="ru")
             h3.title Перфоратор BOSCH BFG 9000
             s.old-price 32500 Р.
             p.price 25500 Р.
+            .visually-hidden
+              a(href="") купить
+              button(type="submit") в закладки
           .goods-item
             a(href="")
               img(src="img/Perforator_3000.jpg", alt="Perforator_3000")
             h3.title Перфоратор BOSCH BFG 3000
             s.old-price 22500 Р.
             p.price 15500 Р.
+            .visually-hidden
+              a(href="") купить
+              button(type="submit") в закладки
           .goods-item
             a(href="")
               img(src="img/Perforator_6000.jpg", alt="Perforator_6000")
             h3.title Перфоратор BOSCH BFG 6000
             s.old-price 30500 Р.
             p.price 25500 Р.
+            .visually-hidden
+              a(href="") купить
+              button(type="submit") в закладки
           .goods-item
             a(href="")
               img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
             h3.title Перфоратор BOSCH BFG 2000
             p.price 12500 Р.
+            .visually-hidden
+              a(href="") купить
+              button(type="submit") в закладки
       section.popular.manufacturer
         header.popular-header
           h3 Популярные Производители:
@@ -238,16 +251,10 @@ html(lang="ru")
           section.socials
             .social-item.vk
               a(href="vk.com" target="_blank" aria-label="vk")
-                svg(xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15")
-                  path(fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z")
             .social-item.facebook
               a(href="facebook.com" target="_blank" aria-label="facebook")
-                svg(xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22")
-                  path(fill="#FFF" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z")
             .social-item.instagram
               a(href="instagram.com" target="_blank" aria-label="instagram")
-                svg(xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21")
-                  path(fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z")
           p Обратная связь
           a(href="mailto:mail@htmlacademy.ru") mail@htmlacademy.ru
           a(href="https://htmlacademy.ru/intensive/htmlcss" target="_blank") Разработано htmlacademy.ru
