--- a/index.pug
+++ b/index.pug
@@ -16,7 +16,7 @@ html(lang="ru")
               label(for="search")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
                   path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
-              input(type="text", id="search" placeholder="Поиск:")
+              input(type="text" id="search" placeholder="Поиск:")
           .bookmarks
             svg(xmlns="http://www.w3.org/2000/svg" width="14" height="16" viewBox="0 0 14 16")
               path(fill="#ffffff" d="M14 15c0 .55-.368.741-.818.426l-5.363-3.765c-.45-.315-1.187-.315-1.637 0L.818 15.426C.368 15.741 0 15.55 0 15V1c0-.55.45-1 1-1h12c.55 0 1 .45 1 1v14z")
@@ -35,15 +35,17 @@ html(lang="ru")
             h2.visually-hidden главные данные
             p Интернет-магазин строительных материалов и инструментов для ремонта
           .address
-            a(href="tel:+78125550555") +7 (812) 555-05-55
+            .phone-number
+              .phone
+              a.number(href="tel:+78125550555") +7 (812) 555-05-55
             p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
           .authorization
-            a(href="login.html" aria-label="login")
+            a.enter(href="login.html" aria-label="login")
               svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
                 path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
                 path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
               p.customer Войти
-            a(href="registration.html") Регистриция
+            a.registration(href="registration.html") Регистриция
         nav.navigation
           ul.navigation-list
             li.navigation-item
